# guvi-hack

./: .gitignore  AGENTS.md  AI for Fraud Detection & User Safety document.md  RAILWAY_DEPLOYMENT.md  README.md  TESTING_GUIDE.md  check_mistral.py  evaluate_flow.py  prompts.json  pyproject.toml  render.yaml  requirements.txt  test_api.sh  test_conversation.sh  test_results_test-session-1770302228.txt  verification_results_20260205_165322.txt  verify_api.sh  verify_fallback.py  verify_output.txt  verify_prod_api.py  verify_team.py
app/: agent.py  agentos.py  config.py  intelligence.py  llm_fallback.py  load_balancer.py  main.py  models.py  personas.py  team.py
app/agents/: honeypot.py  scam_detector.py
app/simulation/: scammer_simulator.py
prompts/: honeypot_agent.prompt.yaml
tests/scenarios/: test_example_scenario.py
